# vct-match-data

./: .gitignore  Main.py  README.md  ScannedMatches.pickle  ScannedMatches.txt  VCT.db  pyproject.toml  requirements.txt  setup.cfg
Notebooks/: VLRScraping.ipynb
scripts/: run_gui.py  run_text.py
vct/: __init__.py  copy_data.py  databases.py  functions.py  get_data.py  gui_elements.py  gui_viewer.py  new_game.py  viewer.py
