[metadata]
name = vct_match_data
description = A package to obtain VCT match data for analysis purposes.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Chris Sherman
maintainer_email = chris.j.sherman@outlook.co.uk

[options]
python_requires = >= 3.11
packages = vct
install_requires =
    beautifulsoup4==4.12.3
    customtkinter==5.2.2
    cx_Freeze==7.2.0
    matplotlib==3.8.1
    numpy==1.26.1
    Requests==2.32.3
    SQLAlchemy==2.0.23
